src/snapshots/cornercase__ui__tests__tab_context__renders_codex_context_in_the_wide_layout.snap
---
source: src/ui.rs
expression: "render(&codex(\"gpt-5.4\", Some(20))).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ shop (1)                     │  login                  │                                          "
"                               │▌ ├ codex                │                                          "
"  + new project                │▌ │ gpt-5.4 · 20%        │                                          "
"                               │  ├ nvim                 │                                          "
"                               │  └ + tab                │                no tab open               "
"                               │                         │         + tab opens a shell here         "
"                               │  + new workspace        │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                   todo  │                                          "
"  quit                         │                         │                                          "
