src/snapshots/cornercase__ui__tests__tab_context__renders_opencode_working_with_its_model_and_context.snap
---
source: src/ui.rs
assertion_line: 6488
expression: render(&view).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" Projects                      │ Workspaces              │                                          "
"                               │                         │                                          "
"▌ shop (1)                     │  login                  │                                          "
"                               │▌ ├ ◐ opencode           │                                          "
"  + New                        │▌ │   DeepSeek V4… · 12% │                                          "
"                               │  ├ › nvim               │                                          "
"                               │  └ + Tab                │                no tab open               "
"                               │                         │         + Tab opens a shell here         "
"                               │  + New workspace        │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  Settings                     │                         │                                          "
"  Usage                        │  Files            TODO  │                                          "
"  Quit                         │                         │                                          "
