src/snapshots/cornercase__ui__tests__tab_context__renders_the_memory_in_the_compact_layout.snap
---
source: src/ui.rs
expression: "render_sized(&view, SMALL.width, SMALL.height).backend()"
---
"                                                                                "
"   ≡     shop › login › claude                                ▤      ☐      ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" ‹ projects    shop                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"  login                                                                   ⋯  ×  "
"  │                                                                             "
"▌ │                                                                             "
"▌ ├ ◐ claude                                                              ⋯  ×  "
"▌ │   Opus 5.5 · 17% · 1.2 GB                                                   "
"  │                                                                             "
"  ├ nvim                                                                  ⋯  ×  "
"  │                                                                             "
"  │                                                                             "
"  └ + tab                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  + new workspace                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
