src/snapshots/cornercase__ui__tests__tab_context__renders_the_model_and_the_context_under_the_tab.snap
---
source: src/ui.rs
expression: render(&with_details(opus(17))).backend()
---
"  ⌕ search projects, workspaces, tabs                    │  no tab open                             "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ shop (1)                     │  login                  │                                          "
"                               │  ▌ ◐ claude             │                                          "
"  + new project                │      Opus 5.5 · 17%     │                                          "
"                               │    nvim                 │                                          "
"                               │    + tab                │                                          "
"                               │                         │                                          "
"                               │  + new workspace        │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                   todo  │                                          "
"  quit                         │                         │                                          "
